syntax = "proto3";

package xyz.block.ftl.v1beta1.provisioner;

option go_package = "github.com/TBD54566975/ftl/backend/protos/xyz/block/ftl/v1beta1/provisioner;provisioner";
option java_multiple_files = true;

// Resource is an abstract resource extracted from FTL Schema.
message Resource {
  // id unique within the module
  string resource_id = 1;

  oneof resource {
    PostgresResource postgres = 102;
    MysqlResource mysql = 103;
  }
}

// Resource types
//
// we use convention of prefixing field names with out_ if they are populated
// after being provisioned by the provisioning engine

message PostgresResource {
  // fields populated after the resource has been created
  string out_read_endpoint = 101;
  string out_write_endpoint = 102;
}

message MysqlResource {
  // fields populated after the resource has been created
  string out_read_endpoint = 101;
  string out_write_endpoint = 102;
}
